[package]
name = "xparse-macros"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2021"

[lib]
proc-macro = true

[features]
async = []

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
